JumpScript/tests/baselines/reference/duplicateLocalVariable3.errors.txt
tests/cases/compiler/duplicateLocalVariable3.jump(11,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type 'number', but here has type 'string'.


==== tests/cases/compiler/duplicateLocalVariable3.jump (1 errors) ====
    var x = 1;
    var x = 2; 
    
    function f() {
        var y = 1;
        var y = 2;
    }
    
    function f2() {
        var z = 3;
        var z = "";
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type 'number', but here has type 'string'.
    }